--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,52 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+:root {
+  --background: #ffffff;
+  --bg-color: #F9F7FF;
+  --text-color: #171717;
+  --para-color: #302C42;
+  --primary-color: #785dfb;
+  --secondary-color: #f3f4f6;
+  --accent-color: #2563eb;
+  --accent-color-dark: #9333ea;
+  --border-radius: 0.5rem;
+  --heading-font: "Space Grotesk", sans-serif;
+  --body-font: "Space Grotesk", sans-serif;
+  /* primary color */
 
+  /* max width */
+  --max-width: 1300px;
+}
+
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+body {
+  background: var(--background);
+  color: var(--text-color);
+  font-family: "Space Grotesk", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.container {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: 0rem 0.9rem;
 }
