create splash screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,36 +1,45 @@
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 :root {
-  --background: #ffffff;
-  --bg-color: #F9F7FF;
+  /* colors */
+  --bg-color: #f9f7ff;
   --text-color: #171717;
-  --para-color: #302C42;
-  --primary-color: #785dfb;
-  --secondary-color: #f3f4f6;
-  --accent-color: #2563eb;
-  --accent-color-dark: #9333ea;
+  --primary-color: #0f172a;
+  --secondary-color: #f1f5f9;
+  --accent-color: #2dd4bf;
+  --cta-btn: #3b82f6;
+  --dot-color: #3b82f6;
+
+  /* border-radius */
   --border-radius: 0.5rem;
-  --heading-font: "Space Grotesk", sans-serif;
-  --body-font: "Space Grotesk", sans-serif;
-  /* primary color */
+
+  /* font */
+  --heading-font: "inter", sans-serif;
+  --body-font: "inter", sans-serif;
+
+  /* font sizes */
+  --font-lg: 1.125rem;
+  --font-md: 1rem;
+  --font-sm: 0.875rem;
+  --font-xs: 0.75rem;
+
+  /* heading font sizes */
+  --heading-1: 1.25rem;
+  --heading-2: 0.9rem;
+
+  /* body font size */
+  --text-size: 0.9rem
 
   /* max width */
   --max-width: 1300px;
 }
 
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-body {
-  background: var(--background);
   color: var(--text-color);
+  background: var(--background);
   font-family: "Space Grotesk", sans-serif;
   font-size: 16px;
   line-height: 1.5;
