--- a/src/components/layouts/featurescard/FeatureCard.module.css
+++ b/src/components/layouts/featurescard/FeatureCard.module.css
@@ -1,9 +1,10 @@
+.section {
+  padding: 6rem 0;
+}
 .features {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 1.5rem;
-  padding: 4rem 2rem;
-  /* background-color: #f9fafc; */
 }
 
 .featureCard {
@@ -22,4 +23,3 @@
   font-size: 0.95rem;
   color: #555;
 }
-
