--- a/src/components/layouts/herosection/HeroSection.module.css
+++ b/src/components/layouts/herosection/HeroSection.module.css
@@ -1,8 +1,11 @@
+
+.section {
+  padding: 6rem 0;
+}
 .hero {
   display: flex;
   /* justify-content: space-between; */
   align-items: center;
-  padding: 4rem 2rem;
   background-color: #0f172a;
   color: white;
 }
