--- a/src/components/layouts/howitworks/HowItWorks.module.css
+++ b/src/components/layouts/howitworks/HowItWorks.module.css
@@ -1,6 +1,6 @@
 .section {
   padding: 4rem 0;
-  /* background-color: #f8f9fa;  */
+  /* background-color: #f8f9fa; */
 }
 
 .container {
@@ -14,7 +14,7 @@
   font-weight: 700;
   text-align: center;
   margin-bottom: 3rem;
-  /* color: #333; */
+  color: var(--text-color);
 }
 
 .stepsContainer {
@@ -26,28 +26,35 @@
 .step {
   display: flex;
   gap: 2rem;
-  align-items: flex-start;
+  align-items: center;
   padding: 2rem;
   /* background-color: #ffffff; */
   border-radius: 12px;
   /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); */
 }
 
-.stepNumber {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 542;
-  height: 542;
-  /* top: 1207px;
-  left: 169px; */
-
-  background-color: var(--secondary-color); /* Brand color - adjust as needed */
-  /* color: white; */
-  font-size: 1.5rem;
-  font-weight: bold;
-  border-radius: 50%;
+.stepIconContainer {
+  position: relative;
+  width: 500px;
+  height: 500px;
   flex-shrink: 0;
+}
+
+.circleBackground {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+}
+
+.stepIcon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* filter: brightness(0) invert(1);  */
+  /* Makes the icon white */
 }
 
 .stepContent {
@@ -57,19 +64,20 @@
 .stepTitle {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
-  /* color: #333; */
+  color: var(--secondary-color);
 }
 
 .stepDescription {
-  /* color: #666; */
+  color: var(--accent-color);
   margin-bottom: 1.5rem;
   line-height: 1.6;
+  font-weight: 700;
 }
 
 .stepButton {
   padding: 0.75rem 1.5rem;
-  background-color: #4a6bff;
-  color: white;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   border: none;
   border-radius: 6px;
   font-weight: 600;
@@ -78,7 +86,7 @@
 }
 
 .stepButton:hover {
-  background-color: #3a5bef;
+  background-color: var(--accent-color);
 }
 
 /* Responsive adjustments */
@@ -89,7 +97,7 @@
     text-align: center;
   }
 
-  .stepNumber {
+  .stepIconContainer {
     margin-bottom: 1rem;
   }
 
