--- a/src/components/layouts/navbar/Navbar.module.css
+++ b/src/components/layouts/navbar/Navbar.module.css
@@ -1,10 +1,14 @@
+.header{
+
+}
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
   background-color: #0F172A;
   color: #fff;
+  padding: 1.2rem 0rem;
+
 
 }
 
