create testimonial component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,9 @@
   --accent-color: #2dd4bf;
   --cta-btn: #3b82f6;
   --dot-color: #3b82f6;
+  --cards-bg: #ecebeb;
+  --card-bg: #ffffff;
+  ;
   
   
 
