--- a/src/components/layouts/navbar/Navbar.module.css
+++ b/src/components/layouts/navbar/Navbar.module.css
@@ -13,9 +13,9 @@
 }
 
 .logo {
-  font-size: 1.5rem;
+  /* font-size: 1.5rem;
   font-weight: 700;
-  color: #ffffff;
+  color: #ffffff; */
 }
 
 .dot {
@@ -39,7 +39,7 @@
 }
 
 .signup {
-  background-color: var(--cta-btn);
+  background-color: var(--cta-btn-color);
   ;
   padding: 0.5rem 1rem;
   border-radius: 6px;
